--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -5,33 +5,50 @@
 
 
 	"comment": "BLOCKS",
-	"block.mubble.oak_vertical_slab": "Laje Vertical de Carvalho",
-	"block.mubble.spruce_vertical_slab": "Laje Vertical de Pinheiro",
-	"block.mubble.birch_vertical_slab": "Laje Vertical de Eucalipto",
-	"block.mubble.jungle_vertical_slab": "Laje Vertical de Selva",
-	"block.mubble.acacia_vertical_slab": "Laje Vertical de Acácia",
-	"block.mubble.dark_oak_vertical_slab": "Laje Vertical de Carvalho Escuro",
-	"block.mubble.stone_vertical_slab": "Laje Vertical de Pedra",
-	"block.mubble.sandstone_vertical_slab": "Laje Vertical de Arenito",
-	"block.mubble.cobblestone_vertical_slab": "Laje Vertical de Pedregulho",
-	"block.mubble.brick_vertical_slab": "Laje Vertical de Tijolo",
-	"block.mubble.stone_brick_vertical_slab": "Laje Vertical de Tijolo de Pedra",
-	"block.mubble.nether_brick_vertical_slab": "Laje Vertical de Tijolo do Nether",
-	"block.mubble.quartz_vertical_slab": "Laje Vertical de Quartzo",
-	"block.mubble.red_sandstone_vertical_slab": "Laje Vertical de Arenito Vermelho",
-	"block.mubble.purpur_vertical_slab": "Laje Vertical de Purpura",
-	"block.mubble.prismarine_vertical_slab": "Laje Vertical de Prismarina",
-	"block.mubble.prismarine_brick_vertical_slab": "Laje Vertical de Tijolo de Prismarina",
-	"block.mubble.dark_prismarine_vertical_slab": "Laje Vertical de Prismarina Escura",
+	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
+	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
+	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
+	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
+	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
+	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
+	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
+	"//block.mubble.smooth_stone_vertical_slab": "Smooth Stone Vertical Slab",
+	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
+	"//block.mubble.mossy_cobblestone_vertical_slab": "Mossy Cobblestone Vertical Slab",
+	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
+	"//block.mubble.mossy_stone_brick_vertical_slab": "Mossy Stone Brick Vertical Slab",
+	"//block.mubble.granite_vertical_slab": "Granite Vertical Slab",
+	"//block.mubble.polished_granite_vertical_slab": "Polished Granite Vertical Slab",
+	"//block.mubble.diorite_vertical_slab": "Diorite Vertical Slab",
+	"//block.mubble.polished_diorite_vertical_slab": "Polished Diorite Vertical Slab",
+	"//block.mubble.andesite_vertical_slab": "Andesite Vertical Slab",
+	"//block.mubble.polished_andesite_vertical_slab": "Polished Andesite Vertical Slab",
+	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
+	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
+	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
+	"//block.mubble.cut_sandstone_vertical_slab": "Cut Sandstone Vertical Slab",
+	"//block.mubble.smooth_sandstone_vertical_slab": "Smooth Sandstone Vertical Slab",
+	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
+	"//block.mubble.cut_red_sandstone_vertical_slab": "Cut Red Sandstone Vertical Slab",
+	"//block.mubble.smooth_red_sandstone_vertical_slab": "Smooth Red Sandstone Vertical Slab",
+	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
+	"//block.mubble.red_nether_brick_vertical_slab": "Red Nether Brick Vertical Slab",
+	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
+	"//block.mubble.smooth_quartz_vertical_slab": "Smooth Quartz Vertical Slab",
+	"//block.mubble.end_stone_brick_vertical_slab": "End Stone Brick Vertical Slab",
+	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
+	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
+	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
+	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
 
 	"//block.mubble.dark_prismarine_wall": "Dark Prismarine Wall",
 
-	"block.mubble.oak_leaf_pile": "Tapete de Folhas de Carvalho",
-	"block.mubble.spruce_leaf_pile": "Tapete de Folhas de Pinheiro",
-	"block.mubble.birch_leaf_pile": "Tapete de Folhas de Eucalipto",
-	"block.mubble.jungle_leaf_pile": "Tapete de Folhas de Selva",
-	"block.mubble.acacia_leaf_pile": "Tapete de Folhas de Acácia",
-	"block.mubble.dark_oak_leaf_pile": "Tapete de Folhas de Carvalho Escuro",
+	"//block.mubble.oak_leaf_pile": "Oak Leaves Pile",
+	"//block.mubble.spruce_leaf_pile": "Spruce Leaves Pile",
+	"//block.mubble.birch_leaf_pile": "Birch Leaves Pile",
+	"//block.mubble.jungle_leaf_pile": "Jungle Leaves Pile",
+	"//block.mubble.acacia_leaf_pile": "Acacia Leaves Pile",
+	"//block.mubble.dark_oak_leaf_pile": "Dark Oak Leaves Pile",
 
 	"//block.mubble.permarock": "Permarock",
 	"//block.mubble.permafrost_bricks": "Permafrost Bricks",
@@ -487,6 +504,7 @@
 	"//block.mubble.black_concrete_button": "Black Concrete Button",
 
 	"block.mubble.footblock": "Futebloco",
+	
 	"//block.mubble.blue_cloud_block": "Blue Cloud Block",
 	"//block.mubble.light_blue_cloud_block": "Light Blue Cloud Block",
 	"//block.mubble.cyan_cloud_block": "Cyan Cloud Block",
@@ -503,10 +521,11 @@
 	"block.mubble.light_gray_cloud_block": "Bloco de Nuvem Cinza-Claro",
 	"block.mubble.gray_cloud_block": "Bloco de Nuvem Cinza",
 	"block.mubble.black_cloud_block": "Bloco de Nuvem Preta",
+
 	"block.mubble.tomatoes": "Tomates",
 	"block.mubble.salad": "Salada",
+	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "Bloco de Queijo",
-	"block.mubble.ultimatum_portal": "Portal Ultimatum",
 	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"block.mubble.blue_balloon": "Balão Azul",
@@ -529,15 +548,112 @@
 	"block.mubble.unstable_stone": "Pedra Instável",
 	"block.mubble.fluid_tank": "Tanque de Fluído",
 
+	"//block.mubble.dandelion_pile": "Dandelion Pile",
+	"//block.mubble.poppy_pile": "Poppy Pile",
+	"//block.mubble.blue_orchid_pile": "Blue Orchid Pile",
+	"//block.mubble.allium_pile": "Allium Pile",
+	"//block.mubble.azure_bluet_pile": "Azure Bluet Pile",
+	"//block.mubble.red_tulip_pile": "Red Tulip Pile",
+	"//block.mubble.orange_tulip_pile": "Orange Tulip Pile",
+	"//block.mubble.white_tulip_pile": "White Tulip Pile",
+	"//block.mubble.pink_tulip_pile": "Pink Tulip Pile",
+	"//block.mubble.oxeye_daisy_pile": "Oxeye Daisy Pile",
+	"//block.mubble.cornflower_pile": "Cornflower Pile",
+	"//block.mubble.lily_of_the_valley_pile": "Lily of the Valley Pile",
+	"//block.mubble.wither_rose_pile": "Wither Rose Pile",
 
-	"block.mubble.question_block": "Bloco de ?",
-	"block.mubble.empty_block": "Bloco Vazio",
-	"block.mubble.rotating_block": "Bloco Rotativo",
-	"block.mubble.light_block": "Bloco de Luz",
-	"block.mubble.brick_block": "Bloco de Tijolo",
-	"block.mubble.golden_brick_block": "Bloco de Tijolo Dourado",
-	"block.mubble.note_block": "Bloco de Nota",
-	"block.mubble.super_note_block": "Super Bloco de Nota",
+
+	"//block.mubble.smb_question_block": "? Block (SMB)",
+	"//block.mubble.smb3_question_block": "? Block (SMB3)",
+	"//block.mubble.smw_question_block": "? Block (SMW)",
+	"//block.mubble.nsmbu_question_block": "? Block (NSMBU)",
+	"//block.mubble.smb_ground_ground_block": "Ground Block (SMB - Ground)",
+	"//block.mubble.smb_underground_ground_block": "Ground Block (SMB - Underground)",
+	"//block.mubble.smb_underwater_ground_block": "Ground Block (SMB - Underwater)",
+	"//block.mubble.smb_ghost_house_ground_block": "Ground Block (SMB - Ghost House)",
+	"//block.mubble.smb_airship_ground_block": "Ground Block (SMB - Airship)",
+	"//block.mubble.smb_night_airship_ground_block": "Ground Block (SMB - Night Airship)",
+	"//block.mubble.smb_castle_ground_block": "Ground Block (SMB - Castle)",
+	"//block.mubble.smb_desert_ground_block": "Ground Block (SMB - Desert)",
+	"//block.mubble.smb_forest_ground_block": "Ground Block (SMB - Forest)",
+	"//block.mubble.smb_snow_ground_block": "Ground Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_ground_block": "Ground Block (SMB - Night Snow)",
+	"//block.mubble.smb_sky_ground_block": "Ground Block (SMB - Sky)",
+	"//block.mubble.smw_ground_ground_block": "Ground Block (SMW - Ground)",
+	"//block.mubble.smw_underground_ground_block": "Ground Block (SMW - Underground)",
+	"//block.mubble.smw_underwater_ground_block": "Ground Block (SMW - Underwater)",
+	"//block.mubble.smw_ghost_house_ground_block": "Ground Block (SMW - Ghost House)",
+	"//block.mubble.smw_airship_ground_block": "Ground Block (SMW - Airship)",
+	"//block.mubble.smw_castle_ground_block": "Ground Block (SMW - Castle)",
+	"//block.mubble.smw_desert_ground_block": "Ground Block (SMW - Desert)",
+	"//block.mubble.smw_forest_ground_block": "Ground Block (SMW - Forest)",
+	"//block.mubble.smw_snow_ground_block": "Ground Block (SMW - Snow)",
+	"//block.mubble.smw_night_snow_ground_block": "Ground Block (SMW - Night Snow)",
+	"//block.mubble.smw_sky_ground_block": "Ground Block (SMW - Sky)",
+	"//block.mubble.smb3_ground_ground_block": "Ground Block (SMB3 - Ground)",
+	"//block.mubble.smb3_underground_ground_block": "Ground Block (SMB3 - Underground)",
+	"//block.mubble.smb3_underwater_ground_block": "Ground Block (SMB3 - Underwater)",
+	"//block.mubble.smb3_ghost_house_ground_block": "Ground Block (SMB3 - Ghost House)",
+	"//block.mubble.smb3_airship_ground_block": "Ground Block (SMB3 - Airship)",
+	"//block.mubble.smb3_night_airship_ground_block": "Ground Block (SMB3 - Night Airship)",
+	"//block.mubble.smb3_castle_ground_block": "Ground Block (SMB3 - Castle)",
+	"//block.mubble.smb3_night_castle_ground_block": "Ground Block (SMB3 - Night Castle)",
+	"//block.mubble.smb3_desert_ground_block": "Ground Block (SMB3 - Desert)",
+	"//block.mubble.smb3_snow_ground_block": "Ground Block (SMB3 - Snow)",
+	"//block.mubble.smb3_night_snow_ground_block": "Ground Block (SMB3 - Night Snow)",
+	"//block.mubble.smb3_sky_ground_block": "Ground Block (SMB3 - Sky)",
+	"//block.mubble.smb_empty_block": "Empty Block (SMB)",
+	"//block.mubble.smb3_empty_block": "Empty Block (SMB3)",
+	"//block.mubble.smw_empty_block": "Empty Block (SMW)",
+	"//block.mubble.nsmbu_empty_block": "Empty Block (NSMBU)",
+	"//block.mubble.smb_rotating_block": "Rotating Block (SMB)",
+	"//block.mubble.smb3_rotating_block": "Rotating Block (SMB3)",
+	"//block.mubble.smw_rotating_block": "Rotating Block (SMW)",
+	"//block.mubble.nsmbu_rotating_block": "Rotating Block (NSMBU)",
+	"//block.mubble.light_block": "Light Block",
+	"//block.mubble.smb_ground_brick_block": "Brick Block (SMB - Ground)",
+	"//block.mubble.smb_underground_brick_block": "Brick Block (SMB - Underground)",
+	"//block.mubble.smb_castle_brick_block": "Brick Block (SMB - Castle)",
+	"//block.mubble.smb_snow_brick_block": "Brick Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_brick_block": "Brick Block (SMB - Night Snow)",
+	"//block.mubble.smb3_brick_block": "Brick Block (SMB3)",
+	"//block.mubble.smw_brick_block": "Brick Block (SMW)",
+	"//block.mubble.nsmbu_brick_block": "Brick Block (NSMBU)",
+	"//block.mubble.smb_golden_brick_block": "Golden Brick Block (SMB)",
+	"//block.mubble.smb3_golden_brick_block": "Golden Brick Block (SMB3)",
+	"//block.mubble.smw_golden_brick_block": "Golden Brick Block (SMW)",
+	"//block.mubble.nsmbu_golden_brick_block": "Golden Brick Block (NSMBU)",
+	"//block.mubble.smb_ground_hard_block": "Hard Block (SMB - Ground)",
+	"//block.mubble.smb_underground_hard_block": "Hard Block (SMB - Underground)",
+	"//block.mubble.smb_underwater_hard_block": "Hard Block (SMB - Underwater)",
+	"//block.mubble.smb_castle_hard_block": "Hard Block (SMB - Castle)",
+	"//block.mubble.smb_snow_hard_block": "Hard Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_hard_block": "Hard Block (SMB - Night Snow)",
+	"//block.mubble.smb3_hard_block": "Hard Block (SMB3)",
+	"//block.mubble.smw_stone_hard_block": "Hard Block (SMW - Stone)",
+	"//block.mubble.smw_wood_hard_block": "Hard Block (SMW - Wood)",
+	"//block.mubble.nsmbu_hard_block": "Hard Block (NSMBU)",
+	"//block.mubble.smb_ice_block": "Ice Block (SMB)",
+	"//block.mubble.smb3_ice_block": "Ice Block (SMB3)",
+	"//block.mubble.smw_ice_block": "Ice Block (SMW)",
+	"//block.mubble.nsmbu_ice_block": "Ice Block (NSMBU)",
+	"//block.mubble.smb_note_block": "Note Block (SMB)",
+	"//block.mubble.smb3_note_block": "Note Block (SMB3)",
+	"//block.mubble.smw_note_block": "Note Block (SMW)",
+	"//block.mubble.nsmbu_note_block": "Note Block (NSMBU)",
+	"//block.mubble.smb_super_note_block": "Super Note Block (SMB)",
+	"//block.mubble.smb3_super_note_block": "Super Note Block (SMB3)",
+	"//block.mubble.smw_super_note_block": "Super Note Block (SMW)",
+	"//block.mubble.nsmbu_super_note_block": "Super Note Block (NSMBU)",
+	"//block.mubble.smb_door": "Door (SMB)",
+	"//block.mubble.smb3_door": "Door (SMB3)",
+	"//block.mubble.smw_door": "Door (SMW)",
+	"//block.mubble.nsmbu_door": "Door (NSMBU)",
+	"//block.mubble.smb_key_door": "Key Door (SMB)",
+	"//block.mubble.smb3_key_door": "Key Door (SMB3)",
+	"//block.mubble.smw_key_door": "Key Door (SMW)",
+	"//block.mubble.nsmbu_key_door": "Key Door (NSMBU)",
+	
 	"block.mubble.fire_flower": "Flor de Fogo",
 	"block.mubble.ice_flower": "Flor de Gelo",
 	"block.mubble.boomerang_flower": "Flor de Bumerangue",
@@ -632,6 +748,28 @@
 	"block.mubble.marble_zone_stone": "Pedra de Marble Zone",
 	"block.mubble.yellow_studiopolis_clapper": "Claquete de Studiopolis Amarela",
 	"block.mubble.blue_studiopolis_clapper": "Claquete de Studiopolis Azul",
+
+	"//block.mubble.press_garden_planks": "Press Garden Planks",
+	"//block.mubble.pink_press_garden_sapling": "Pink Press Garden Sapling",
+	"//block.mubble.red_press_garden_sapling": "Red Press Garden Sapling",
+	"//block.mubble.press_garden_log": "Press Garden Log",
+	"//block.mubble.stripped_press_garden_log": "Stripped Press Garden Log",
+	"//block.mubble.press_garden_wood": "Press Garden Wood",
+	"//block.mubble.stripped_press_garden_wood": "Stripped Press Garden Wood",
+	"//block.mubble.pink_press_garden_leaves": "Pink Press Garden Leaves",
+	"//block.mubble.pink_press_garden_leaf_pile": "Pink Press Garden Leaves Pile",
+	"//block.mubble.red_press_garden_leaves": "Red Press Garden Leaves",
+	"//block.mubble.red_press_garden_leaf_pile": "Red Press Garden Leaves Pile",
+	"//block.mubble.press_garden_pressure_plate": "Press Garden Pressure Plate",
+	"//block.mubble.press_garden_trapdoor": "Press Garden Trapdoor",
+	"//block.mubble.press_garden_button": "Press Garden Button",
+	"//block.mubble.press_garden_stairs": "Press Garden Stairs",
+	"//block.mubble.press_garden_slab": "Press Garden Slab",
+	"//block.mubble.press_garden_vertical_slab": "Press Garden Vertical Slab",
+	"//block.mubble.press_garden_fence_gate": "Press Garden Fence Gate",
+	"//block.mubble.press_garden_fence": "Press Garden Fence",
+	"//block.mubble.press_garden_door": "Press Garden Door",
+	
 	"block.mubble.spring": "Mola",
 
 
@@ -712,6 +850,8 @@
 	"block.mubble.potted_light_gray_mushroom": "Vaso de Cogumelo Cinza Claro",
 	"block.mubble.potted_gray_mushroom": "Vaso de Cogumelo Cinza",
 	"block.mubble.potted_black_mushroom": "Vaso de Cogumelo Preto",
+	"//block.mubble.potted_pink_press_garden_sapling": "Potted Pink Press Garden Sapling",
+	"//block.mubble.potted_red_press_garden_sapling": "Potted Red Press Garden Sapling",
 	"block.mubble.potted_scarlet_sapling": "Vaso de Muda de Escarlate",
 	"block.mubble.potted_scarlet_mushroom": "Vaso de Cogumelo Escarlate",
 	"block.mubble.potted_scarlet_orchid": "Vaso de Orquidea Escarlate",
@@ -739,6 +879,7 @@
 	"item.mubble.banana": "Banana",
 	"item.mubble.apricot": "Damasco",
 	"item.mubble.mango": "Manga",
+	"//item.mubble.blueberries": "Blueberries",
 	"item.mubble.totem_of_ascending": "Totem da Ascensão",
 
 
@@ -750,12 +891,13 @@
 	"item.mubble.yellow_coin": "Moeda Amarela",
 	"item.mubble.red_coin": "Moeda Vermelha",
 	"item.mubble.blue_coin": "Moeda Azul",
+	"//item.mubble.smb_key": "Key (SMB)",
+	"//item.mubble.smb3_key": "Key (SMB3)",
+	"//item.mubble.smw_key": "Key (SMW)",
+	"//item.mubble.nsmbu_key": "Key (NSMBU)",
 
 
 	"item.mubble.smash_ball": "Bola Smash",
-
-
-	"item.mubble.annoying_dog": "Cão Irritante",
 
 
 	"item.mubble.blank_music_disc": "Disco de Música em Branco",
@@ -888,6 +1030,8 @@
 	"biome.mubble.pink_cherry_oak_forest": "Floresta de Carvalho Cereja Rosa",
 	"biome.mubble.white_cherry_oak_forest": "Floresta de Carvalho Cereja Branca",
 	"//biome.mubble.permafrost": "Permafrost",
+	
+	"//biome.mubble.press_garden": "Press Garden",
 
 	"biome.mubble.scarlet_forest": "Floresta de Escarlate",
 
@@ -898,8 +1042,6 @@
 	"subtitles.mubble.block.question_block.loot.power_up": "Bloco de ? dropou um power up",
 	"subtitles.mubble.block.question_block.loot.coin": "Bloco de ? dropa uma moeda",
 	"subtitles.mubble.block.spring.trigger": "Primavera acionada",
-	"subtitles.mubble.item.annoying_dog.disappear": "Cachorro Irritante desaparece",
-	"subtitles.mubble.item.annoying_dog.bark": "Cachorro Irritante late",
 	"subtitles.mubble.item.cape_feather.use": "Pena da Capa foi usada",
 	"subtitles.mubble.item.smash_ball.use": "Bola Smash foi usada",
 	"subtitles.mubble.costume.cappy.ambient": "Cappy murmura",
