Added Kid's Hat

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "Maske von König Round",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "Baldis Hut",
 
 
