--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "King Round Mask",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "Baldi's Head",
 
 
