--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -5,43 +5,42 @@
 
 
 	"comment": "BLOCKS",
-	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
-	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
-	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
-	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
-	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
-	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
-	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
-	"//block.mubble.smooth_stone_vertical_slab": "Smooth Stone Vertical Slab",
-	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
-	"//block.mubble.mossy_cobblestone_vertical_slab": "Mossy Cobblestone Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.mossy_stone_brick_vertical_slab": "Mossy Stone Brick Vertical Slab",
-	"//block.mubble.granite_vertical_slab": "Granite Vertical Slab",
-	"//block.mubble.polished_granite_vertical_slab": "Polished Granite Vertical Slab",
-	"//block.mubble.diorite_vertical_slab": "Diorite Vertical Slab",
-	"//block.mubble.polished_diorite_vertical_slab": "Polished Diorite Vertical Slab",
-	"//block.mubble.andesite_vertical_slab": "Andesite Vertical Slab",
-	"//block.mubble.polished_andesite_vertical_slab": "Polished Andesite Vertical Slab",
-	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
-	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
-	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
-	"//block.mubble.cut_sandstone_vertical_slab": "Cut Sandstone Vertical Slab",
-	"//block.mubble.smooth_sandstone_vertical_slab": "Smooth Sandstone Vertical Slab",
-	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
-	"//block.mubble.cut_red_sandstone_vertical_slab": "Cut Red Sandstone Vertical Slab",
-	"//block.mubble.smooth_red_sandstone_vertical_slab": "Smooth Red Sandstone Vertical Slab",
-	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
-	"//block.mubble.red_nether_brick_vertical_slab": "Red Nether Brick Vertical Slab",
-	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
-	"//block.mubble.smooth_quartz_vertical_slab": "Smooth Quartz Vertical Slab",
-	"//block.mubble.end_stone_brick_vertical_slab": "End Stone Brick Vertical Slab",
-	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
-	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
-	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
-	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
+	"block.mubble.oak_vertical_slab": "Dalle verticale de chêne",
+	"block.mubble.spruce_vertical_slab": "Dalle verticale de sapin",
+	"block.mubble.birch_vertical_slab": "Dalle verticale de bouleau",
+	"block.mubble.jungle_vertical_slab": "Dalle verticale d'acajou",
+	"block.mubble.acacia_vertical_slab": "Dalle verticale d'acacia",
+	"block.mubble.dark_oak_vertical_slab": "Dalle verticale de chêne noir",
+	"block.mubble.stone_vertical_slab": "Dalle verticale de pierre",
+	"block.mubble.smooth_stone_vertical_slab": "Dalle verticale de roche lisse",
+	"block.mubble.cobblestone_vertical_slab": "Dalle verticale en pierres",
+	"block.mubble.mossy_cobblestone_vertical_slab": "Dalle verticale de pierres moussues",
+	"block.mubble.stone_brick_vertical_slab": "Dalle verticale de pierre taillée",
+	"block.mubble.mossy_stone_brick_vertical_slab": "Dalle verticale de pierre taillée moussue",
+	"block.mubble.granite_vertical_slab": "Dalle verticale de granite",
+	"block.mubble.polished_granite_vertical_slab": "Dalle verticale de granite poli",
+	"block.mubble.diorite_vertical_slab": "Dalle verticale de diorite",
+	"block.mubble.polished_diorite_vertical_slab": "Dalle verticale de diorite polie",
+	"block.mubble.andesite_vertical_slab": "Dalle verticale d'andésite'",
+	"block.mubble.polished_andesite_vertical_slab": "Dalle verticale d'andésite polie",
+	"block.mubble.brick_vertical_slab": "Dalle verticale de brique",
+	"block.mubble.sandstone_vertical_slab": "Dalle verticale de grès",
+	"block.mubble.cut_sandstone_vertical_slab": "Dalle verticale de grès taillé",
+	"block.mubble.smooth_sandstone_vertical_slab": "Dalle verticale de grès lisse",
+	"block.mubble.red_sandstone_vertical_slab": "Dalle verticale de grès rouge",
+	"block.mubble.cut_red_sandstone_vertical_slab": "Dalle verticale de grès rouge taillé",
+	"block.mubble.smooth_red_sandstone_vertical_slab": "Dalle verticale de grès lisse",
+	"block.mubble.nether_brick_vertical_slab": "Dalle verticale de brique du Nether",
+	"block.mubble.red_nether_brick_vertical_slab": "Dalle verticale de brique rouge du Nether",
+	"block.mubble.quartz_vertical_slab": "Dalle verticale de quartz",
+	"block.mubble.smooth_quartz_vertical_slab": "Dalle verticale de quartz lisse",
+	"block.mubble.end_stone_brick_vertical_slab": "Dalle verticale de brique de l'End",
+	"block.mubble.purpur_vertical_slab": "Dalle de purpur",
+	"block.mubble.prismarine_vertical_slab": "Dalle de prismarine",
+	"block.mubble.prismarine_brick_vertical_slab": "Dalle de prismarine taillée",
+	"block.mubble.dark_prismarine_vertical_slab": "Dalle de prismarine sombre",
 
-	"block.mubble.dark_prismarine_wall": "Muret en prismarine sombre",
+	"block.mubble.dark_prismarine_wall": "Muret de prismarine sombre",
 
 	"block.mubble.oak_leaf_pile": "Pile de feuilles de chêne",
 	"block.mubble.spruce_leaf_pile": "Pile de feuilles de sapin",
@@ -524,7 +523,7 @@
 
 	"block.mubble.tomatoes": "Tomates",
 	"block.mubble.salad": "Salade",
-	"//block.mubble.blueberry_bush": "Blueberry Bush",
+	"block.mubble.blueberry_bush": "Buisson à myrtilles",
 	"block.mubble.cheese_block": "Bloc de fromage",
 	"block.mubble.minecraft_10th_anniversary_cake": "Gâteau d'anniversaire des 10 ans de Minecraft",
 
@@ -563,10 +562,10 @@
 	"//block.mubble.wither_rose_pile": "Wither Rose Pile",
 
 
-	"//block.mubble.smb_question_block": "? Block (SMB)",
-	"//block.mubble.smb3_question_block": "? Block (SMB3)",
-	"//block.mubble.smw_question_block": "? Block (SMW)",
-	"//block.mubble.nsmbu_question_block": "? Block (NSMBU)",
+	"block.mubble.smb_question_block": "Bloc ? (SMB)",
+	"block.mubble.smb3_question_block": "Bloc ? (SMB3)",
+	"block.mubble.smw_question_block": "Bloc ? (SMW)",
+	"block.mubble.nsmbu_question_block": "Bloc ? (NSMBU)",
 	"//block.mubble.smb_ground_ground_block": "Ground Block (SMB - Ground)",
 	"//block.mubble.smb_underground_ground_block": "Ground Block (SMB - Underground)",
 	"//block.mubble.smb_underwater_ground_block": "Ground Block (SMB - Underwater)",
@@ -879,7 +878,7 @@
 	"item.mubble.banana": "Banane",
 	"item.mubble.apricot": "Abricot",
 	"item.mubble.mango": "Mangue",
-	"//item.mubble.blueberries": "Blueberries",
+	"item.mubble.blueberries": "Myrtilles",
 	"item.mubble.totem_of_ascending": "Totem d'ascendance",
 
 
@@ -891,10 +890,10 @@
 	"item.mubble.yellow_coin": "Pièce jaune",
 	"item.mubble.red_coin": "Pièce rouge",
 	"item.mubble.blue_coin": "Pièce bleue",
-	"//item.mubble.smb_key": "Key (SMB)",
-	"//item.mubble.smb3_key": "Key (SMB3)",
-	"//item.mubble.smw_key": "Key (SMW)",
-	"//item.mubble.nsmbu_key": "Key (NSMBU)",
+	"item.mubble.smb_key": "Clé (SMB)",
+	"item.mubble.smb3_key": "Clé (SMB3)",
+	"item.mubble.smw_key": "Clé (SMW)",
+	"item.mubble.nsmbu_key": "Clé (NSMBU)",
 
 
 	"item.mubble.smash_ball": "Balle Smash",
@@ -996,6 +995,9 @@
 
 	"item.mubble.ralsei_hat": "Chapeau de Ralsei",
 	"item.mubble.king_round_mask": "Masque King Round",
+
+
+	"//item.mubble.kid_hat": "Kid's Hat",
 
 
 	"item.mubble.baldi_head": "Tête de Baldi",
