--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "round demon mask creepi hooo",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "besicz hed",
 
 
