--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "ʞsɐW punoɹ ƃuᴉʞ",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "pɐǝH s,ᴉplɐq",
 
 
