--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "Koning rond masker",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "Baldi's hoofd",
 
 
