--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -998,6 +998,9 @@
 	"item.mubble.king_round_mask": "Máscara de King Round",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"item.mubble.baldi_head": "Cabeça de Baldi",
 
 
