--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -998,6 +998,9 @@
 	"//item.mubble.king_round_mask": "<newline>",
 
 
+	"//item.mubble.kid_hat": "Kid's Hat",
+
+
 	"//item.mubble.baldi_head": "<newline>",
 
 
